tests/negative/gold/import_show1_test.gold
tests/negative/import_show1_test.toit:8:3: error: Unresolved identifier: 'b'
  b  // Unresolved.
  ^
Compilation failed.
